
      by the user specific to its hardware.

    o the terraces function plots the likelihood / parsimony surface for a set

      of trees.

    o as.networx and plot.networx got a new option "outline", reducing the

      number of edges plotted for planar networks.

    o modelTest got a new argument R to additionally test free rate model.

OTHER CHANGES

    o improvements to write.ancestral and write.pml.

    o Decreased the overhead for NNI rearrangements in optim.pml / pml_bb,

      tree rearrangements are now much faster for larger trees (with hundreads

      of taxa).

    o bab got a progress bar, as it might runs for a long time (suggested by

      Barbara Bitarello). bab might be faster thanks to an improved lower bound.

    o densiTree now calls axisPhylo, which was improved in ape, to avoid code

      duplication

    o more error checking of input arguments and associated tests

BUG FIXES

    o update.pml can now can properly update site.rate

    o fix degree of freedom for free rate models


    CHANGES in PHANGORN VERSION 2.12.0

NEW FEATURES

    o new function supgma, performing serial sampled UPGMA

      (Drummond, Rodrigo 2000)

    o new function gap_as_state, treating gaps as a state.

    o new function keep_as_tip allows to prune a tree and keep nodes as a tip

      (suggested by Hedvig Skirgard)

    o nnls now can estimate trees with calibrations and tip dated trees

    o the functions Descendants, Ancestors, Siblings, mrca.phy now also accept a

      character vector for the node argument and not only integers.

    o Ancestral state reconstruction was rewritten.

      The output of ancestral.pars and ancestral.pars could return different

      objects. anc_pml and anc_pars are now prefered over ancestral.pml and

      ancestral.pars. Output is now an object of class ancestral, which contains

      tree with node labels, the original alignment and reconstructions.
