@@ -4,7 +4,7 @@
 \alias{write.pml}
 \title{Export pml objects}
 \usage{
-write.pml(x, file = "pml", save_rds = FALSE, digits = 10, ...)
+write.pml(x, file = "pml", save_rds = TRUE, digits = 10, ...)
 }
 \arguments{
 \item{x}{an object of class ancestral.}
@@ -28,9 +28,15 @@ exported. For digits larger smaller than zero no edge length are exported.}
 \details{
 \code{write.pml} creates several files. It exports the alignment as fasta
 file. It writes out the ML tree in a newick file and the estimates parameters
-in a txt file.  It should be possible to (re-)create the pml object up to
-numerical inaccuracies.
-If bootstrap trees exist these are additionally exported in a nexus file.
+in a txt file. It should be possible to (re-)create the pml object up to
+numerical inaccuracies and this is possible with the *.rds file.
+If bootstrap trees exist these are additionally exported in a compressed
+nexus file.
+Additionally several plots are returned. The maximum likelihood tree, with
+support values, if these are available. If an bootstrapped trees exist, a
+consensus tree, a consensus network (< 200 tips) and terrace plot.
+And last but not least the distribution of the rates. It might be better to
+adopt these on the dataset.
 }
 \examples{
 data(woodmouse)
